stm32_test/.metadata/.plugins/org.eclipse.cdt.ui/stm32f401.build.log
16:25:53 **** Incremental Build of configuration Debug for project stm32f401 ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/spi.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DSTM32F401xC -DDEBUG -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I../USB_DEVICE/App -I../USB_DEVICE/Target -I../Middlewares/ST/STM32_USB_Device_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/spi.d" -MT"Core/Src/spi.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/spi.o"
arm-none-eabi-gcc "../Core/Src/syscalls.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DSTM32F401xC -DDEBUG -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I../USB_DEVICE/App -I../USB_DEVICE/Target -I../Middlewares/ST/STM32_USB_Device_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/syscalls.d" -MT"Core/Src/syscalls.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/syscalls.o"
arm-none-eabi-gcc "../Core/Src/sysmem.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DSTM32F401xC -DDEBUG -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I../USB_DEVICE/App -I../USB_DEVICE/Target -I../Middlewares/ST/STM32_USB_Device_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/sysmem.d" -MT"Core/Src/sysmem.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/sysmem.o"
arm-none-eabi-gcc "../Core/Src/system_stm32f4xx.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DSTM32F401xC -DDEBUG -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I../USB_DEVICE/App -I../USB_DEVICE/Target -I../Middlewares/ST/STM32_USB_Device_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/system_stm32f4xx.d" -MT"Core/Src/system_stm32f4xx.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/system_stm32f4xx.o"
In file included from ../Core/Src/spi.c:21:0:
../Core/Inc/spi.h:33:8: error: unknown type name 'SPI_HandleTypeDef'
 extern SPI_HandleTypeDef hspi1;
        ^~~~~~~~~~~~~~~~~
../Core/Src/spi.c:27:1: error: unknown type name 'SPI_HandleTypeDef'; did you mean 'PCD_HandleTypeDef'?
 SPI_HandleTypeDef hspi1;
 ^~~~~~~~~~~~~~~~~
 PCD_HandleTypeDef
../Core/Src/spi.c: In function 'MX_SPI1_Init':
../Core/Src/spi.c:33:8: error: request for member 'Instance' in something not a structure or union
   hspi1.Instance = SPI1;
        ^
../Core/Src/spi.c:34:8: error: request for member 'Init' in something not a structure or union
   hspi1.Init.Mode = SPI_MODE_MASTER;
        ^
../Core/Src/spi.c:34:21: error: 'SPI_MODE_MASTER' undeclared (first use in this function); did you mean 'HAL_I2C_MODE_MASTER'?
   hspi1.Init.Mode = SPI_MODE_MASTER;
                     ^~~~~~~~~~~~~~~
                     HAL_I2C_MODE_MASTER
../Core/Src/spi.c:34:21: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/spi.c:35:8: error: request for member 'Init' in something not a structure or union
   hspi1.Init.Direction = SPI_DIRECTION_2LINES;
        ^
../Core/Src/spi.c:35:26: error: 'SPI_DIRECTION_2LINES' undeclared (first use in this function); did you mean 'I2C_DIRECTION_RECEIVE'?
   hspi1.Init.Direction = SPI_DIRECTION_2LINES;
                          ^~~~~~~~~~~~~~~~~~~~
                          I2C_DIRECTION_RECEIVE
../Core/Src/spi.c:36:8: error: request for member 'Init' in something not a structure or union
   hspi1.Init.DataSize = SPI_DATASIZE_8BIT;
        ^
../Core/Src/spi.c:36:25: error: 'SPI_DATASIZE_8BIT' undeclared (first use in this function)
   hspi1.Init.DataSize = SPI_DATASIZE_8BIT;
                         ^~~~~~~~~~~~~~~~~
../Core/Src/spi.c:37:8: error: request for member 'Init' in something not a structure or union
   hspi1.Init.CLKPolarity = SPI_POLARITY_LOW;
        ^
../Core/Src/spi.c:37:28: error: 'SPI_POLARITY_LOW' undeclared (first use in this function); did you mean 'TIM_OCPOLARITY_LOW'?
   hspi1.Init.CLKPolarity = SPI_POLARITY_LOW;
                            ^~~~~~~~~~~~~~~~
                            TIM_OCPOLARITY_LOW
../Core/Src/spi.c:38:8: error: request for member 'Init' in something not a structure or union
   hspi1.Init.CLKPhase = SPI_PHASE_1EDGE;
        ^
../Core/Src/spi.c:38:25: error: 'SPI_PHASE_1EDGE' undeclared (first use in this function)
   hspi1.Init.CLKPhase = SPI_PHASE_1EDGE;
                         ^~~~~~~~~~~~~~~
../Core/Src/spi.c:39:8: error: request for member 'Init' in something not a structure or union
   hspi1.Init.NSS = SPI_NSS_HARD_OUTPUT;
        ^
../Core/Src/spi.c:39:20: error: 'SPI_NSS_HARD_OUTPUT' undeclared (first use in this function)
   hspi1.Init.NSS = SPI_NSS_HARD_OUTPUT;
                    ^~~~~~~~~~~~~~~~~~~
../Core/Src/spi.c:40:8: error: request for member 'Init' in something not a structure or union
   hspi1.Init.BaudRatePrescaler = SPI_BAUDRATEPRESCALER_8;
        ^
../Core/Src/spi.c:40:34: error: 'SPI_BAUDRATEPRESCALER_8' undeclared (first use in this function); did you mean 'TPI_ACPR_PRESCALER_Pos'?
   hspi1.Init.BaudRatePrescaler = SPI_BAUDRATEPRESCALER_8;
                                  ^~~~~~~~~~~~~~~~~~~~~~~
                                  TPI_ACPR_PRESCALER_Pos
../Core/Src/spi.c:41:8: error: request for member 'Init' in something not a structure or union
   hspi1.Init.FirstBit = SPI_FIRSTBIT_MSB;
        ^
../Core/Src/spi.c:41:25: error: 'SPI_FIRSTBIT_MSB' undeclared (first use in this function); did you mean 'SPI_SR_TXE_Msk'?
   hspi1.Init.FirstBit = SPI_FIRSTBIT_MSB;
                         ^~~~~~~~~~~~~~~~
                         SPI_SR_TXE_Msk
../Core/Src/spi.c:42:8: error: request for member 'Init' in something not a structure or union
   hspi1.Init.TIMode = SPI_TIMODE_DISABLE;
        ^
../Core/Src/spi.c:42:23: error: 'SPI_TIMODE_DISABLE' undeclared (first use in this function); did you mean 'SPI_TIMODE_DISABLED'?
   hspi1.Init.TIMode = SPI_TIMODE_DISABLE;
                       ^~~~~~~~~~~~~~~~~~
                       SPI_TIMODE_DISABLED
../Core/Src/spi.c:43:8: error: request for member 'Init' in something not a structure or union
   hspi1.Init.CRCCalculation = SPI_CRCCALCULATION_DISABLE;
        ^
../Core/Src/spi.c:43:31: error: 'SPI_CRCCALCULATION_DISABLE' undeclared (first use in this function); did you mean 'SPI_CRCCALCULATION_DISABLED'?
   hspi1.Init.CRCCalculation = SPI_CRCCALCULATION_DISABLE;
                               ^~~~~~~~~~~~~~~~~~~~~~~~~~
                               SPI_CRCCALCULATION_DISABLED
../Core/Src/spi.c:44:8: error: request for member 'Init' in something not a structure or union
   hspi1.Init.CRCPolynomial = 10;
        ^
../Core/Src/spi.c:45:7: warning: implicit declaration of function 'HAL_SPI_Init'; did you mean 'HAL_GPIO_Init'? [-Wimplicit-function-declaration]
   if (HAL_SPI_Init(&hspi1) != HAL_OK)
       ^~~~~~~~~~~~
       HAL_GPIO_Init
arm-none-eabi-gcc "../Core/Src/tim.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DSTM32F401xC -DDEBUG -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I../USB_DEVICE/App -I../USB_DEVICE/Target -I../Middlewares/ST/STM32_USB_Device_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/tim.d" -MT"Core/Src/tim.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/tim.o"
../Core/Src/spi.c: At top level:
../Core/Src/spi.c:52:22: error: unknown type name 'SPI_HandleTypeDef'; did you mean 'PCD_HandleTypeDef'?
 void HAL_SPI_MspInit(SPI_HandleTypeDef* spiHandle)
                      ^~~~~~~~~~~~~~~~~
                      PCD_HandleTypeDef
../Core/Src/spi.c:84:24: error: unknown type name 'SPI_HandleTypeDef'; did you mean 'PCD_HandleTypeDef'?
 void HAL_SPI_MspDeInit(SPI_HandleTypeDef* spiHandle)
                        ^~~~~~~~~~~~~~~~~
                        PCD_HandleTypeDef
make: *** [Core/Src/subdir.mk:61: Core/Src/spi.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j4 all" terminated with exit code 2. Build might be incomplete.

16:25:55 Build Failed. 28 errors, 1 warnings. (took 2s.615ms)

